# CLImage

./: .gitignore  CMakeLists.txt  README.md
BlurImageTest/: climage
BlurImageTest/BlurImageTest.xcodeproj/: project.pbxproj
BlurImageTest/BlurImageTest.xcodeproj/xcshareddata/xcschemes/: BlurImageTest.xcscheme
CLImage/app/src/main/: AndroidManifest.xml
CLImage/app/src/main/cpp/: CMakeLists.txt  CameraCalibration.hpp  CanonEOSRPCalibration.cpp  IMX571Calibration.cpp  ImageRegistration.cpp  IntegralImage.cpp  IntegralImage.hpp  LeicaQ2Calibration.cpp  PRNG.h  RANSAC.cpp  RANSAC.hpp  RicohGRIIICalibration.cpp  SURF.cpp  SURF.hpp  SVD.hpp  Sonya6400Calibration.cpp  cl_pipeline.cpp  demosaic.cpp  demosaic.hpp  demosaic_cl.cpp  demosaic_cl.hpp  demosaic_utils.cpp  feature2d.hpp  homography.cpp  homography.hpp  iPhone11Calibration.cpp  main.cpp  pyramid_processor.cpp  pyramid_processor.hpp  pyramidal_denoise.cpp  pyramidal_denoise.hpp  raw_converter.cpp  raw_converter.hpp  raw_pipeline.cpp
CLImage/app/src/main/cpp/GRANSAC/: AbstractModel.hpp  GRANSAC.hpp
CLImage/app/src/main/cpp/OpenCL/: SURF.cl  demosaic copy.cl  demosaic.cl
CLImage/app/src/main/cpp/rtl/: Base.hpp  Evaluator.hpp  LMedS.hpp  Line.hpp  MLESAC.hpp  MSAC.hpp  RANSAC.hpp  RTL.hpp
CLImageLib/CLImageLib.xcodeproj/: project.pbxproj
CLImageLib/CLImageLib.xcodeproj/xcshareddata/xcschemes/: CLImageLib.xcscheme
CLImageTest/CLImageTest/: SURF.cpp  SURF.hpp
CLImageTest/CLImageTest.xcodeproj/: project.pbxproj
CLImageTest/CLImageTest.xcodeproj/xcshareddata/xcschemes/: CLImageTest.xcscheme  ImageRegistration.xcscheme  MonitorCalibration.xcscheme  PyramidFusion.xcscheme  RawPipeline.xcscheme  ToupCamReprocess.xcscheme
CLImageTest/CLImageTest/libs/: libtiff.dylib  libz.dylib
CLImageTest/ImageRegistration/: main.cpp
CLImageTest/MonitorCalibration/: monitorCalibration.cpp
CLImageTest/PyramidFusion/: pyramidFusion.cpp
CLImageTest/ToupCamReprocess/: toupCamReprocess.cpp
ImagingPipeline/ImagingPipeline.xcodeproj/: project.pbxproj
ImagingPipeline/ImagingPipeline.xcodeproj/xcshareddata/xcschemes/: ImagingPipeline.xcscheme  PyramidFusion.xcscheme
ImagingPipeline/PyramidFusion/: pyramidFusion.cpp
MonitorCalibration/MonitorCalibration/: main.cpp
MonitorCalibration/MonitorCalibration.xcodeproj/: project.pbxproj
MonitorCalibration/MonitorCalibration.xcodeproj/xcshareddata/xcschemes/: MonitorCalibration.xcscheme
linux/: CMakeLists.txt
src/: gls_cl.cpp  gls_cl.hpp  gls_cl_image.hpp  gls_color_science.cpp  gls_dng_lossless_jpeg.hpp  gls_geometry.hpp  gls_image.hpp  gls_image_jpeg.h  gls_image_png.h  gls_image_tiff.cpp  gls_linalg.hpp
